Bug 207742 - 'Copy Link Location' functionality has the wrong format
Summary: 'Copy Link Location' functionality has the wrong format
Status: VERIFIED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-18 01:15 UTC by Sabine Faure
Modified: 2009-11-05 17:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2009-09-18 01:15:46 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Launch KAB
- Create a contact with an email address (ex:John.smith@coolmail.com)
- Select it
- in the right hand side column right click on the email address and select 'Copy Link Location'
- Open Kwrite or Kmail composer and paste the link

The following line is pasted: 'mailto:John%20%3Cjohn.smith%40coolmail.com%3E' whereas the correct format should be John <john.smith@coolmail.com>

Trunk, Svn Rev 1024850
Comment 1 Tobias Koenig 2009-11-04 11:08:16 UTC
SVN commit 1044596 by tokoe:

Remove the 'Copy Link Location' action from the context menu.
The links are only for internal use anyway and external applications
won't know how to handle them.

BUG: 207742


 M  +3 -3      contactgroupviewer.cpp  
 M  +4 -3      contactviewer.cpp  
 A             textbrowser_p.h   [License: LGPL (v2+)]


WebSVN link: http://websvn.kde.org/?view=rev&revision=1044596
Comment 2 Sabine Faure 2009-11-05 17:47:18 UTC
It is corrected now.

The 'Copy Link Location' option has been removed from the pop up menu when right clicking on an email address from the right hand side column of the main view.

Trunk, Svn Rev 1045165