Remove the 'Copy Link Location' action from the context menu. The links are only for internal use anyway and external applications won't know how to handle them.

BUG: 207742

svn path=/trunk/KDE/kdepimlibs/; revision=1044596